--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,24 @@
         android:theme="@style/Theme.ChefEmCasa"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
-            android:icon="@drawable/logo"
+            android:name=".MyRecipesFragment"
             android:exported="false" />
+        <activity
+            android:name=".FavoriteFragment"
+            android:exported="false" />
+        <activity
+            android:name=".SearchFragment"
+            android:exported="false" />
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false"
+            android:icon="@drawable/logo" />
         <activity
             android:name=".CadastroActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,9 +38,7 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
