tem que criar a criacao de receitas e começar fazer as conexoes das telas conectar os fragmentos e comecar o banco de dados php

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.ChefEmCasa"
         tools:targetApi="31">
         <activity
+            android:name=".RecipeRegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".MyRecipesFragment"
             android:exported="false" />
         <activity
