--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,28 +12,28 @@
         android:theme="@style/Theme.ChefEmCasa"
         tools:targetApi="31">
         <activity
-            android:name=".HomeActivity"
+            android:name=".Activity.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".RecipeRegisterActivity"
+            android:name=".Activity.RecipeRegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".MyRecipesFragment"
+            android:name=".Activity.MyRecipesFragment"
             android:exported="false" />
         <activity
-            android:name=".FavoriteFragment"
+            android:name=".Activity.FavoriteFragment"
             android:exported="false" />
         <activity
-            android:name=".SearchFragment"
+            android:name=".Activity.SearchFragment"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".Activity.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".RegisterActivity"
+            android:name=".Activity.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activity.MainActivity"
             android:theme="@android:style/Theme.NoDisplay"
             android:exported="true">
             <intent-filter>
